@@ -1,5 +1,9 @@
 2003-01-03  David Malcolm <david@davemalcolm.demon.co.uk>
 
+	* cong-app.c, cong-document.c
+
+	Reduced debug log spewage
+
 	* cong-app.c
 
 	Added references to the various Bugzilla bugs for the various FIXMEs to be deferred to the 1.0.0 milestone
